--- a/lib/cuke_report_generator/templates/main.html.erb
+++ b/lib/cuke_report_generator/templates/main.html.erb
@@ -19,7 +19,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Suite: <%= @run.runname %></a>
+          <a class="navbar-brand" href="#">Suite: <%= @run.runname unless @run.runname.nil? %></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
